# openai-translator

./: CMakeLists.txt  README.md
include/: popupwindow.h  translator.h
src/: main.cpp  popupwindow.cpp  popupwindow.ui  translator.cpp
